Fix media queries not showing up on mobile

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -30,7 +30,10 @@ body{
     
 }
 
-html { height: 100%; }
+html { 
+    height: 100%;
+    width: 100vw;
+}
 
 .card{
     padding: 5vw;
@@ -150,6 +153,65 @@ html { height: 100%; }
     }
 }
 
+/* Big screens*/
+@media all and (min-width: 1536px){
+    #address{
+        font-size: 3rem;
+    }
+    #addressPickerContainer{
+        height: 10vh;
+    }
+    #intro{
+        height: 15vh;
+    }
+
+    #intro h1 {
+        font-size: 4rem;
+    }
+
+        .controlButton{
+        width: 80px;
+    }
+
+
+    .controlButton:nth-of-type(2){
+        display: none;
+    }
+
+    p{
+        font-size: 3rem;
+    }
+
+
+}
+
+/*Medium */
+
+@media screen and (min-width: 351px) and (max-width: 1536px){
+    #address{
+        font-size: 2rem;
+    }
+    #addressPickerContainer{
+        height: 10vh;
+        width: 100vw;
+    }
+    #intro{
+        height: 15vh;
+    }
+
+    #intro h1 {
+        font-size: 3rem;
+    }
+    
+    .controlButton{
+        width: 40px;
+    }
+
+    p{
+        font-size: 1rem;
+    }
+}
+
 /* smaller screens*/
 @media screen and (max-width: 350px){
     #address{
@@ -163,61 +225,9 @@ html { height: 100%; }
     }
 }
 
-@media screen and (max-width: 2047px){
-    #address{
-        font-size: 3rem;
-    }
-    #addressPickerContainer{
-        height: 10vh;
-    }
-    #intro{
-        height: 15vh;
-    }
-
-    #intro h1 {
-        font-size: 5rem;
-    }
-    
-    .controlButton{
-        width: 80px;
-    }
-
-    p{
-        font-size: 3rem;
-    }
-}
-
-/* Big screens*/
-@media all and (min-width: 2048px){
-    #address{
-        font-size: 4rem;
-    }
-    #addressPickerContainer{
-        height: 10vh;
-    }
-    #intro{
-        height: 15vh;
-    }
-
-    #intro h1 {
-        font-size: 10rem;
-    }
-
-     .controlButton{
-        width: 80px;
-    }
-
-    
-    .controlButton:nth-of-type(2){
-        display: none;
-    }
-
-    p{
-        font-size: 3rem;
-    }
 
 
-}
+
 
 
 
